# magiclamp

./: .coverage  .env.example  .env.railway.example  .gitignore  .replit  AGENTS.md  CHANGELOG.md  DEPLOY.md  DEPLOY_LOCAL.md  DEPLOY_PROD.md  MIGRATION.md  Makefile  N8N_DEPLOYMENT_CHECKLIST.md  README.md  ROADMAP.md  SPREADVERSE_IMPLEMENTATION_SUMMARY.md  SUBAGENTS.md  coolify.json  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  railway.json  replit.md  setup.bat  start.bat  start.sh
.agents/: handoff-template.md  routing.md
.github/: CODEOWNERS  MERGE_VALIDATION_POLICY.md  dependabot.yml  pull_request_template.md  release-drafter.yml
brain/: Dockerfile  main.py  requirements.txt  scheduler.py
desktop/: index.html  package-lock.json  package.json  tailwind.config.js
docs/: README.md  STATUS.md  rag.md
n8n-workflows/: README.md  telegram_to_magiclamp_workflow.json
nginx/: nginx.conf  ui.conf
scripts/: backfill_embeddings.py  deploy_local.sh
spreadverse-desktop/: .env.example  .gitignore  ARCHIVED.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
spreadverse-desktop/src-tauri/: Cargo.toml  tauri.conf.json
tests/: __init__.py  conftest.py  requirements-test.txt  test_app_startup.py  test_auth.py  test_billing.py  test_brain_split.py  test_bus.py  test_circuit.py  test_control_plane_guards.py  test_cors_security.py  test_customer.py  test_eval_harness.py  test_llm_jais.py  test_llm_providers.py  test_llm_router.py  test_locale.py  test_rag.py  test_rbac.py  test_sqlite_backend.py  (+2 more)
(+127 files in other folders)
